tests/should-fail/rawcodes/rawcodelit-15.j
globals
    integer s = 'ab\xc'
endglobals